add refinements and destructured code

--- a/code/index.html
+++ b/code/index.html
@@ -36,11 +36,12 @@
 
       <section class="big-news">
         <!-- The big news content -->
-        <img class="big-news--img" src="./images/laundry.jpg" alt="laundry basket"/>
+        <img class="big-news--img" src="./images/married.jpg" alt="married couple"/>
         <div class="big-news--card">
-          <h2>Trouble in laundry room <span>- Gunhilds nightmare came true</span></h2>
-          <p>Every week since 1984, Gunhild has used the laundry room monday mornings 7 a.m to wash her curtains. Last monday someone stole Gunhilds laundry time so she couldn´t wash. The guilty has been found and..</p>
-          <button type="button">-> read more</button>
+          <h2>Sune and Manuela just got married!</h2>
+          <span class="date-item">20 JAN, 2022</span>
+          <p>Our dear neighbors, Sune and Manuela, have just got married! It was a small event with their families. Both moved into Bumblebee senior residence as widows and eventually found love for each other during the meetings at the bridge club. We celebrate with cake next bridge meeting february 2nd.</p>
+          <button class="big-news--button" type="button"><i class="fas fa-arrow-right"></i> read more</button>
         </div>
       </section>
       
@@ -50,7 +51,8 @@
         <div class="news-feed--card">
           <div class="news-feed--btn">
             <img class="news-feed--img" src="./images/cat.jpg" alt="cat with green background"/>
-            <p>Nisse is missing! Barbro is so worried and wants us all to keep our eyes open.</p>
+            <span class="date-item">20 JAN, 2022</span>
+            <p><strong>Nisse is missing!</strong> Barbro is so worried and wants us all to keep our eyes open.</p>
           </div>
           <button class="news-feed--button" type="button">...</button>
         </div>
@@ -58,7 +60,8 @@
         <div class="news-feed--card">
           <div class="news-feed--btn">
             <img class="news-feed--img" src="./images/car.jpg" alt="old car"/>
-            <p>Anonymous neighbour wonder if Sören really needed to use his car so often? We must think of our generations to come..</p>
+            <span class="date-item">20 JAN, 2022</span>
+            <p>Anonymous neighbour wonder if Sören really needed to use his car so often? <strong>We must think of the environment and our generations to come.</strong></p>
           </div>
           <button class="news-feed--button" type="button">...</button>
         </div>
@@ -66,7 +69,8 @@
         <div class="news-feed--card">
           <div class="news-feed--btn">
             <img class="news-feed--img" src="./images/crossword.jpg" alt="crosswords"/>
-            <p>Hildur won last weeks cross word competition.</p>
+            <span class="date-item">19 JAN, 2022</span>
+            <p>Hildur won last weeks cross word competition. <strong>Congratulations Hildur!</strong></p>
           </div>
           <button class="news-feed--button" type="button">...</button>
         </div>
@@ -74,7 +78,8 @@
         <div class="news-feed--card">
           <div class="news-feed--btn">
             <img class="news-feed--img" src="./images/knitting.jpg" alt="knitting"/>
-            <p>PRO is having their monthly knitting gathering next week. Call Ali on 3rd floor or Gun on 2nd floor if you want to join.</p>
+            <span class="date-item">18 JAN, 2022</span>
+            <p>National Association of Pensioners (NAP) is having their monthly knitting gathering next week. Call Ali on 3rd floor or Gun on 2nd floor if you want to join.</p>
           </div>
           <button class="news-feed--button" type="button">...</button>
         </div>
