Further work with Navbar and The big news content

--- a/code/index.html
+++ b/code/index.html
@@ -2,37 +2,36 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Her money</title>
+    <title>Her Money</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
 
   <body>
-
-    <!-- Logo and navbar -->
     <header>
-     <section class="navbar">
-       <div class="logo">
-        <img src="" alt="Logo">
-       </div>
-       <div class="navbar-item-1">
-        <button>Click</button>
-       </div>
-       <div class="navbar-item-2">
-         <button>Click</button>
-        </div>
-       <div class="navbar-item-3">
-         <button>Click</button>
-        </div>
-        <div class="navbar-item-4">
-          <button>Click</button>
-         </div>
-
-     </section> 
+      <!-- Logo & Navbar -->
+      <nav>
+        <ul class="menu">
+            <li class="logo"><a href="#">Her Money</a></li>
+            <li class="item"><a href="#">Home</a></li>
+            <li class="item"><a href="#">About</a></li>
+            <li class="item"><a href="#">Contact</a></li>
+        </ul>
+    </nav>
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+      <div class="columns">
+        <div class="column image">
+          <img class="main-img" src="https://images.unsplash.com/photo-1469334031218-e382a71b716b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Woman in control of her finances">
+        </div>
+        <div class="column article">
+          <h2>Successfully Negotiate a Higher Salary</h2>
+          <h4>Learn: how to approach salary conversations with confidence,</h4>
+          <p>the #1 thing you're doing wrong in a negotiation (and how to fix it), how to answer dreaded job interview questions about salary, and how to frame your ask to make a "yes" easy.</p>
+        </div>
+      </div>
     </section>
 
     <section class="">
