Add css reset file

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <head>
   <meta charset="utf-8" />
   <title>Tech News</title>
+  <link rel="stylesheet" href="./styles/reset.css" />
   <link rel="stylesheet" href="./styles/style.css" />
 </head>
 
 <body>
   <div class="wrapper">
     <header class="header">
-      <h1>TN</h1>
-      <nav>
+      <nav class="navbar">
+        <h1>TN ❈</h1>
         <ul class="header__list">
           <li>Tech</li>
           <li>Videos</li>
@@ -92,6 +93,7 @@
             </p>
           </div>
         </article>
+        </div>
     </main>
     <aside class="aside"></aside>
   </div>
