change of theme

--- a/code/index.html
+++ b/code/index.html
@@ -11,23 +11,32 @@
     <header>
       <nav class="top-nav">
         <a class="logo" href="#">
-          <img src="C:\Kodning\Technigo-projects\Week-2\project-news-site\5525786492665856.jpg" alt="dino-logo">
+          <img src="istockphoto-1278931900-170667a.jpg" alt="sofa-logo">
         </a>
         <a href="#">Videos</a>
         <a href="#">Blog</a>
 
         <input typ="text" placeholder="Search">
       </nav>
-      <!-- Some kind of logo and navbar + search -->
     </header>
 
     <section class="big-news">
-      <!-- The big news content -->
+      <!-- The big news content ?How to create your home office? -->
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="smaller-news">
+      <div class="small-news-1">
+        ?The most important accessories to your home?
+      </div>
+      <div class="small-news-2">
+        ?Get inspired by these bathtub spots?
+      </div>
+      <div class="small-news-3"></div>
+      <div class="small-news-4"></div>
+      <div class="small-news-5"></div>
+      <div class="small-news-6"></div>
     </section>
+    
     <footer>
       About us
       Contact
