--- a/code/index.html
+++ b/code/index.html
@@ -2,20 +2,45 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>The Yoga Magazine</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
+   
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <!-- Some kind of logo (note to self: ladda upp loggan till imgbb.com) and navbar -->
+      <div class="header"><img src="header-logo-yoga.JPG" alt="logo-yoga" class="round-logo-yoga"/>
+        <h1 class="site-name">The Yoga Magazine</h1>
+      </div>
+      
+      <!--<div class="top-nav">
+        <a class="active" href="#home">Home</a>
+        <a href="#asanas">Asanas</a>
+        <a href="#breathe">Breathe</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+      </div>-->
+
+      <ul>
+        <li><a href="default.asp">Home</a></li>
+        <li><a href="asanas.asp">Asanas</a></li>
+        <li><a href="breathe.asp">Breathe</a></li>
+        <li><a href="contact.asp">Contact</a></li>
+        <li><a href="about.asp">About</a></li>
+      </ul>
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+      <img src="big-news.jpg" alt="A girl practising yoga"/>
+      <h1 class="big-news-title">
     </section>
 
-    <section class="">
+    <section>
       <!-- The other news  -->
     </section>
   </body>
