Change layout for cards.

--- a/code/index.html
+++ b/code/index.html
@@ -52,36 +52,36 @@
           <div class="news-feed--btn">
             <img class="news-feed--img" src="./images/cat.jpg" alt="cat with green background"/>
             <span class="date-item">20 JAN, 2022</span>
-            <p><strong>Nisse is missing!</strong> Barbro is so worried and wants us all to keep our eyes open.</p>
+            <h3>Nisse is missing</h3>
+            <p>Nisse hasn´t been seen since Sunday, which is very unlike him. Let Barbro know if you see Nisse. </p>
           </div>
-          <button class="news-feed--button" type="button">...</button>
         </div>
 
         <div class="news-feed--card">
           <div class="news-feed--btn">
             <img class="news-feed--img" src="./images/car.jpg" alt="old car"/>
             <span class="date-item">20 JAN, 2022</span>
-            <p>Anonymous neighbour wonder if Sören really needed to use his car so often? <strong>We must think of the environment and our generations to come.</strong></p>
+            <h3>Tips to reduce envirnmental impact</h3>
+            <p>Anonymous neighbours wonder if Sören really needed to use his car so often? We must think of the environment and our generations to come.</p>
           </div>
-          <button class="news-feed--button" type="button">...</button>
         </div>
 
         <div class="news-feed--card">
           <div class="news-feed--btn">
             <img class="news-feed--img" src="./images/crossword.jpg" alt="crosswords"/>
             <span class="date-item">19 JAN, 2022</span>
-            <p>Hildur won last weeks cross word competition. <strong>Congratulations Hildur!</strong></p>
+            <h3>Congratulations Hildur!</h3>
+            <p>Hildur won last weeks cross word competition.</p>
           </div>
-          <button class="news-feed--button" type="button">...</button>
         </div>
 
         <div class="news-feed--card">
           <div class="news-feed--btn">
             <img class="news-feed--img" src="./images/knitting.jpg" alt="knitting"/>
             <span class="date-item">18 JAN, 2022</span>
+            <h3>NAP event - knitting</h3>
             <p>National Association of Pensioners (NAP) is having their monthly knitting gathering next week. Call Ali on 3rd floor or Gun on 2nd floor if you want to join.</p>
           </div>
-          <button class="news-feed--button" type="button">...</button>
         </div>
 
       </section>
