--- a/code/index.html
+++ b/code/index.html
@@ -14,13 +14,13 @@
     <title> Technigo Project: The News Site</title>
   </head>
   <body>
+    <main>
     <header>
       <img src="news-site-logo.svg" alt="news site logo" class="logo">
       <img src="desktop-view-logo.svg" alt="news site logo desktop view" class="desktop-view-logo">
       <h1>BKK News</h1>
         <nav> 
           <ul>
-            <li><a href="#">Home</a></li>
             <li><a href="#">News</a></li>
             <li><a href="#">Sport</a></li>
             <li><a href="#">Travel</a></li>
@@ -29,109 +29,103 @@
           </ul>  
         </nav>
     </header>
-<!-- image that separates the header and the content -->
-<!-- I consider this to be an element that separates the header (logo+nav bar) 
-rather than part of the header because I meant it to only display on desktop view. -->
-    <img src="bg-header.jpg" alt="header and content seperation image" class="header-break-img">
-  <!-- The big news content -->
-  <div class="news-container">
+      <!-- The big news content -->
   <section class="main-news">
       <img src="main-news.jpg" alt="koh samui view" class="main-news-img">
-    <div class="main-news-content">
+      <div class="main-news-content">
       <h2>Koh Samui re-added to Sandbox Program</h2>
-      <hr>
-          <p>Thailand has canceled their Test & Go program meaning all tourists travel by air need to enter the Kindom via Phuket Sandbox or complete the mandatory quarantine of 7 days for fully vaccinated tourists.
+         <p>Thailand has canceled their Test & Go program meaning all tourists travel by air need to enter the Kindom via Phuket Sandbox or complete the mandatory quarantine of 7 days for fully vaccinated tourists.
           Luckily, Thailand has decided to open more destinations for their sandbox program. One of them includes the beautiful paradise island "Koh Samui". 
-        </p>
-        <a href="#" class="read-more">Read more</a>
-        <div class="social-logos">
+        <a href="#" class="read-more">Read more</a></p> 
+      </div>    
+    </section>
+        <div class="social-icons">
           <a href="#"><img src="facebook-icon.svg" alt="facebook" ></a>
           <a href="#"><img src="instagram-icon.svg" alt="instagram"></a>
           <a href="#"><img src="twitter-icon.svg" alt="twitter"></a>
           <a href="#"><img src="email-icon.svg" alt="email"></a>
-       </div>
-    </div>    
-  </section>
+        </div>
+
   <!-- The other news  -->
-  <section class="other-news-wrapper">
-   <article class="other-news">
-      <div class="other-news-img">
+  <section class="other-news">
+   <article>
+      <div class="other-news-polaroid">
         <img src="other-news-1.jpg" alt="chinese new year paper burning">
         </div>
           <h3>PM2.5 worsen during Chinese New Year</h3>
-            <p class="other-news-content">More burning during Chinese New Year and the cold air in January are the perfect combination of the beginning of Bankokians' lung cancer journey.
-              <a href="#" class="read-more">Read more</a>
+            <p>More burning during Chinese New Year and the cold air in January are the perfect combination of the beginning of Bankokians' lung cancer journey.
             </p>
+            <a href="#">Read more</a>
       </article>
-    <article class="other-news">
-      <div class="other-news-img">
+    <article>
+      <div class="other-news-polaroid">
         <img src="other-news-2.jpg" alt="electric cables wiring on pole">
         </div>
           <h3>Bangkok plans to remove mass electric cables wiring on pole</h3>
-            <p class="other-news-content">Bangkok surely does not want to loose its chaotic charm. We can talk about safety later because the cables have been there forever and no one dies so far (or noone knows).
-              <a href="#" class="read-more">Read more</a>
+            <p>Bangkok surely does not want to loose its chaotic charm. We can talk about safety later because the cables have been there forever and no one dies so far (or noone knows).
             </p>
+            <a href="#">Read more</a>
       </article>
-    <article class="other-news">
-      <div class="other-news-img">
+    <article>
+      <div class="other-news-polaroid">
         <img src="other-news-3.jpg" alt="paddle boats in bangkok">
       </div>
         <h3>Social distancing in water</h3>
-          <p class="other-news-content">No exceptions, tourists renting paddle boats are to keep distance from others. Yet visiting public parks and rent a paddle boat are still worth it.
-            <a href="#" class="read-more">Read more</a>
+          <p>No exceptions, tourists renting paddle boats are to keep distance from others. Yet visiting public parks and rent a paddle boat are still worth it.
           </p>
+          <a href="#">Read more</a>
      </article>
-    <article class="other-news">
-      <div class="other-news-img">
+    <article>
+      <div class="other-news-polaroid">
         <img src="other-news-4.jpg" alt="bangkok chinatown at night">
       </div>
         <h3>Bangkok nightlife without tourists</h3>
-          <p class="other-news-content">2022 for Bangkok is just 2020 part II, the country's vaccination rate is still not as expected making its people worried about welcoming tourists back in to Thailand.
-            <a href="#" class="read-more">Read more</a>
+          <p>2022 for Bangkok is just 2020 part II, the country's vaccination rate is still not as expected making its people worried about welcoming tourists back in to Thailand.
           </p>
+          <a href="#">Read more</a>
      </article>
-    <article class="other-news">
-      <div class="other-news-img">
+    <article>
+      <div class="other-news-polaroid">
         <img src="other-news-5.jpg" alt="pakced bts train">
     </div>
       <h3>City trains are for rich people</h3>
-        <p class="other-news-content">Public transportation should not be too expensive. Bangkokians complain the Bangkok City Train fares are not in line with the minimum wage.
-          <a href="#" class="read-more">Read more</a>
+        <p>Public transportation should not be too expensive. Bangkokians complain the Bangkok City Train fares are not in line with the minimum wage.
         </p>
+        <a href="#">Read more</a>
       </article>
-    <article class="other-news">
-      <div class="other-news-img">
+    <article>
+      <div class="other-news-polaroid">
         <img src="other-news-6.jpg" alt="street newspaper stall">
     </div>
       <h3>Newspapers are dying</h3>
-        <p class="other-news-content">With the rise of online news, the newspapers are dying. Sadly some people believe social media posts from random people are trustworthy-online news.
-          <a href="#" class="read-more">Read more</a>
+        <p>With the rise of online news, the newspapers are dying. Sadly some people believe social media posts from random people are trustworthy-online news.
         </p>
+        <a href="#">Read more</a>
+  
       </article>
-    <article class="other-news">
-      <div class="other-news-img">
+    <article>
+      <div class="other-news-polaroid">
        <img src="other-news-7.jpg" alt="rainy day at night in bangkok">
     </div>
      <h3>Monsoon arrives too soon</h3>
-        <p class="other-news-content">Heavy rains start hitting bangkok in January. Good news is that it helps clear the PM2.5 and make it easier for Bangkokians to breath for once.
-          <a href="#" class="read-more">Read more</a>
+        <p>Heavy rains start hitting bangkok in January. Good news is that it helps clear the PM2.5 and make it easier for Bangkokians to breath for once.
         </p>
+        <a href="#">Read more</a>
       </article>
-    <article class="other-news">
-      <div class="other-news-img">
+    <article>
+      <div class="other-news-polaroid">
         <img src="other-news-8.jpg" alt="bangkok bts station">
     </div>
       <h3>Confusion around Thailand Pass</h3>
-        <p class="other-news-content"> There is still conflicting imformation on the internet. The Thai authorities suggest anyone wishing to enter Thailand contact the Thai Embassy in their home countries for correct information.
-          <a href="#" class="read-more">Read more</a>
-        </p>
+        <p> There is still conflicting imformation on the internet. The Thai authorities suggest anyone wishing to enter Thailand contact the Thai Embassy in their home countries for correct information.
+        </p><a href="#">Read more</a>
       </article>
     </section>
-  </div>
   <footer>
      </p> Created by <a href="https://github.com/rawisou">Rawisara Saman.</a> 
      Photos by <a href="https://www.flickr.com/photos/fredrik-photography/">Fredrik Magnusson.</a>
      </p>
   </footer>
+</main>
 </body>
 </html>
