made the code cleaner by removing unnecessary classes

--- a/code/index.html
+++ b/code/index.html
@@ -36,7 +36,7 @@
       <h2>Koh Samui re-added to Sandbox Program</h2>
          <p>Thailand has canceled their Test & Go program meaning all tourists travel by air need to enter the Kindom via Phuket Sandbox or complete the mandatory quarantine of 7 days for fully vaccinated tourists.
           Luckily, Thailand has decided to open more destinations for their sandbox program. One of them includes the beautiful paradise island "Koh Samui". 
-        <a href="#" class="read-more">Read more</a></p> 
+        <a href="#">Read more</a></p> 
       </div>    
     </section>
         <div class="social-icons">
