fixed the font in the logo

--- a/code/index.html
+++ b/code/index.html
@@ -16,8 +16,8 @@
   <body>
     <main>
     <header>
-      <img src="news-site-logo.svg" alt="news site logo" class="logo">
-      <img src="desktop-view-logo.svg" alt="news site logo desktop view" class="desktop-view-logo">
+      <img src="mobile-view-logo.png" alt="news site logo" class="logo">
+      <img src="desktop-view-logo.png" alt="news site logo desktop view" class="desktop-view-logo">
       <h1>BKK News</h1>
         <nav> 
           <ul>
