--- a/code/index.html
+++ b/code/index.html
@@ -8,39 +8,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <header>
-      <div class="logo">
-      <img src="logo.svg" alt="">
-      <h1 class="hidden">Daily News</h1>
-    </div>
-      <!--start nav bar-->
-      <nav class="menu">
-        <ul class="menupartOne">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-        </ul>
-      <ul class="menupartTwo">
-          <li><a href="#">Sports</a></li>
-          <li><a href="#contact">Contact</a></li>
-      </ul>
-  </nav>
-    <!--end nav bar-->
-    </header>
+
+<header>
+  <img class="item1" src="logo.svg" alt=""/>
+  <div class="item2">Daily News</div>
+  <div class="item3"><a href="#home">Link1</a></div>
+  <div class="item4"><a href="#home">Link2</a></div>
+  <div class="item5"><a href="#home">Link3</a></div>
+  <div class="item6"><a href="#home">Link4</a></div>
+</header>
 
     <section class="big-news">
-      <!-- The big news content -->
       <div>
-        <img src="/img/carjonhall.jpeg" alt="Bigimage" width="600" height="400">
+        <img src="../img/nikes-red.png" />
       </div>
-      <div>big text</div>
+      <div>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.  
+        </p>
+      </div>
     </section>
 
     <section class="mainText">
       <!-- The other news  -->
-      <div>hello1</div>
-      <div>hello2</div>
-      <div>hello3</div>
-      <div>hello4</div>
+      <div class="childOne">
+        <div>
+          <img src="../img/nikes-red.png"/>
+        </div>
+        <div>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.  
+          </p>
+        </div>
+      </div>
+
+      <div class="childTwo">
+        <div>
+          <img src="../img/nikes-red.png"/>
+        </div>
+        <div>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.  
+          </p>
+        </div>
+      </div>
+
+      <div class="childOne">
+        <div>
+          <img src="../img/nikes-red.png"/>
+        </div>
+        <div>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.  
+          </p>
+        </div>
+      </div>
+
+      <div class="childOne">
+        <div>
+          <img src="../img/nikes-red.png"/>
+        </div>
+        <div>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.  
+          </p>
+        </div>
+      </div>
     </section>
     
   </body>
