--- a/code/index.html
+++ b/code/index.html
@@ -34,7 +34,7 @@
       <img src="main-news.jpg" alt="koh samui view" class="main-news-img">
       <div class="main-news-content">
       <h2>Koh Samui re-added to Sandbox Program</h2>
-         <p>Thailand has canceled their Test & Go program meaning all tourists travel by air need to enter the Kindom via Phuket Sandbox or complete the mandatory quarantine of 7 days for fully vaccinated tourists.
+         <p>Thailand has canceled their Test & Go program meaning all visitors need to enter the Kindom via Phuket Sandbox or complete the mandatory quarantine of 7 days for fully vaccinated tourists.
           Luckily, Thailand has decided to open more destinations for their sandbox program. One of them includes the beautiful paradise island "Koh Samui". 
         <a href="#">Read more</a></p> 
       </div>    
