--- a/code/index.html
+++ b/code/index.html
@@ -46,8 +46,7 @@
       </section>
       
       <section class="news-feed">
-
-        <!-- The other news  -->
+        <!-- The other news content -->
         <div class="news-feed--card">
           <div class="news-feed--btn">
             <img class="news-feed--img" src="./images/cat.jpg" alt="cat with green background"/>
@@ -86,6 +85,15 @@
 
       </section>
     </main>
+
+    <footer>
+      <div class="footer-items">
+        <a href="https://github.com/emmahogberg88"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/emmahogberg/"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://twitter.com/Emm4_dev"><i class="fab fa-twitter"></i></a>
+      </div>
+    </footer>
+
     </body>
     </html>
     
