--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,67 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Poodle Variety</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@1,500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300;1,500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=Cormorant:ital,wght@0,300;1,500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
+    <header class="navbar">
+    <div class="logo">
+     <img src="logo.png" alt="logo">
+    </div>
+    <div class="Name">
+    <h2>Poodle Variety</h2>  
+    </div>
+    
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<section class="big-news">
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
+  <div class="big-image">
+    <img src="big image.png" alt="classy poodle"/>
+  </div>
+
+  <div class="big-text">
+    <h1>Poodle Variety</h1>
+    <h2>World leading Poodle Magazine</h2>
+    <h3>Since 1977</h3>
+  </div>
+
+</section>
+
+<section class="news">
+
+<div class="news-box">
+  <img src="jakob-samuel.jpeg" alt="not a poodle">
+  <h4>Lead singer of The Poodles NOT a poodle</h4>
+  <h5>According to source close to the band</h5>
+</div>
+
+<div class="news-box">
+  <img src="jakob-samuel.jpeg" alt="not a poodle">
+  <h4>Lead singer of The Poodles NOT a poodle</h4>
+  <h5>According to source close to the band</h5>
+</div>
+
+<div class="news-box">
+  <img src="jakob-samuel.jpeg" alt="not a poodle">
+  <h4>Lead singer of The Poodles NOT a poodle</h4>
+  <h5>According to source close to the band</h5>
+</div>
+
+ </section>
+
   </body>
 </html>
