added big news and other news content

--- a/code/index.html
+++ b/code/index.html
@@ -33,10 +33,41 @@
 
     <section class="big-news">
       <!-- The big news content -->
+    <img src="https://images.unsplash.com/photo-1600179576940-894ca492f474?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80"
+    alt="girl-with-burning-match"/>  
+
+    <article class="big-news-article">
+    <h2> Lorem ipsum </h2>
+    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+      nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+       in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+       Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
+       officia deserunt mollit anim id est laborum. </p>
+    </article>
+
     </section>
 
-    <section class="">
+    <section class="other-news">
       <!-- The other news  -->
+    <img src="https://images.unsplash.com/photo-1592597849579-43c25f4f02d6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+    alt="burning-matchstick-in-the-blue-sky"/>
+
+    <img src="https://images.unsplash.com/photo-1506947456723-02bab3048abb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80"
+    alt="match-and-lantern"/>
+
+    <img src="https://images.unsplash.com/photo-1629573005892-48bdf2b5a462?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1182&q=80"
+    alt="rainbow-matches"/>
+    
+    <img src="https://images.unsplash.com/photo-1470009862877-9004bc12fc8b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+    alt="man-in-cave-with-match"/>
+    
+    <img src="https://images.unsplash.com/photo-1536599514254-ee89271345b0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2069&q=80"
+    alt="valentines-day-matches"/>
+
+    <img src="https://images.unsplash.com/photo-1533866254047-a8ec7410aa35?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1448&q=80"
+    alt="red-lipstick-and-burning-match"/>
     </section>
   </body>
 </html>
