Added navbar and footer

--- a/code/index.html
+++ b/code/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
@@ -9,14 +10,30 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <nav>
+        <ul>
+          <li><a href="https://google.com">Home</a></li>
+          <li><a href="https://google.com">Food</a></li>
+          <li><a href="https://google.com">Health</a></li>
+          <li><a href="https://google.com">Travel</a></li>
+          <li><a href="https://google.com">Sign up</a></li>
+        </ul>
+      </nav>
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+      <h1>This is a big deal of newsy stuff!</h1>
+      <img src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20banner.png" alt="raspberry">
     </section>
 
     <section class="">
       <!-- The other news  -->
     </section>
+    
+    <footer>
+      <p>Created by Arianna Allahyar.</p>
+    </footer>
+
   </body>
 </html>
