added section image and text

--- a/code/index.html
+++ b/code/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <!-- meta tag for responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
 
 <header>
-  <img class="item1" src="logo.svg" alt=""/>
-  <div class="item2">Daily News</div>
+  <img class="item1" src="../img/logo.jpg" alt=""/>
+  <div class="item2">Travel St. Martin</div>
   <div class="item3"><a href="#home">Link1</a></div>
   <div class="item4"><a href="#home">Link2</a></div>
   <div class="item5"><a href="#home">Link3</a></div>
@@ -20,9 +20,9 @@
 
     <section class="big-news">
       <div>
-        <img src="../img/nikes-red.png" />
+        <img src="../img/travel5.jpg" />
       </div>
-      <div>
+      <div class="big-news-text">
         <p>
           Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.  
         </p>
@@ -33,7 +33,7 @@
       <!-- The other news  -->
       <div class="childOne">
         <div>
-          <img src="../img/nikes-red.png"/>
+          <img src="../img/travel6.jpg" />
         </div>
         <div>
           <p>
@@ -44,7 +44,7 @@
 
       <div class="childTwo">
         <div>
-          <img src="../img/nikes-red.png"/>
+          <img src="../img/travel5.jpg"/>
         </div>
         <div>
           <p>
@@ -55,7 +55,7 @@
 
       <div class="childOne">
         <div>
-          <img src="../img/nikes-red.png"/>
+          <img src="../img/travel3.jpg"/>
         </div>
         <div>
           <p>
@@ -66,7 +66,7 @@
 
       <div class="childOne">
         <div>
-          <img src="../img/nikes-red.png"/>
+          <img src="../img/travel6.jpg"/>
         </div>
         <div>
           <p>
