added some pictures

--- a/code/index.html
+++ b/code/index.html
@@ -21,20 +21,32 @@
     </header>
 
     <section class="big-news">
-      <!-- The big news content ?How to create your home office? -->
+      <a href="#">
+        <img src="nubelson-fernandes-LLo02Cg2Q3A-unsplash.jpg"
+        alt="home-office">
+        <h2>How to create the perfect home office</h2>
+      </a>
     </section>
 
     <section class="smaller-news">
-      <div class="small-news-1">
-        ?The most important accessories to your home?
-      </div>
-      <div class="small-news-2">
-        ?Get inspired by these bathtub spots?
-      </div>
-      <div class="small-news-3"></div>
-      <div class="small-news-4"></div>
-      <div class="small-news-5"></div>
-      <div class="small-news-6"></div>
+      <article class="small-news-1">
+        <a href="#">
+          <img src="tania-miron-umYxSxMncT4-unsplash.jpg"
+          alt="plants">
+          <h3>The most important accessories for this spring</h3>
+        </a>
+      </article>
+      <article class="small-news-2">
+        <a href="#">
+          <img src="eugenivy_now-1mj1kCplHso-unsplash.jpg"
+          alt="plants">
+          <h3>Get inspired by these bathtub spots</h3>
+        </a>
+      </article>
+      <article class="small-news-3"></article>
+      <article class="small-news-4"></article>
+      <article class="small-news-5"></article>
+      <article class="small-news-6"></article>
     </section>
     
     <footer>
