my first commit to the project

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,117 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"> 
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
   </head>
+
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <nav>
+        <a href="startsidan"><p class="logo"> Å.SIEURIN </p></a>
+        <div class="hamburger-menu">
+          <span class="menu-line"></span>
+          <span class="menu-line"></span>
+          <span class="menu-line"></span>
+          </div>
+      </nav>
+
+      <p>featured article</p>
+      <h1 class="hero-title">THERAPHY A LA GUCCI?</h1>
+      <img class="hero-image" src="images/francesco-bianco-TVsgRyKJDc0-unsplash.jpg" alt="francesco-bianco-TVsgRyKJDc0-unsplash">
+
+      <div class="hero-description"> 
+        <p>What is fashion psychology and why does it matter?</p>
+        <a class="read-more" href="LÄNK TILL SIDA">read more</a> 
+      </div>
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
+    <section class="home-intro">
+      <h1> INSPIRING CULTURAL CHANGE BY APPLYING PSYCHOLOGY IN FASHION TO HELP CREATIVE PROFESSIONALS PUT PEOPLE FIRST.</h1>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="articles-container">
+
+      <p>Articles on the topic of:</p>
+      <a href="LÄNKSIDAN!">Creative Processes</a>
+
+      <div class="row"> 
+
+        <a href="LÄNKSIDAN" class="article-color1">
+          <div class="column" style="background-color: rgb(196, 186, 56);">
+            <h2>The Balancing Act Of Fashion Business</h2>
+            <p>BY ÅSA SIEURIN</p>
+          </div>
+        </a>
+
+        <a href="LÄNKSIDAN" class="article-color2">
+          <div class="column" style="background-color: #65798E;">
+            <h2>The Balancing Act Of Fashion Business</h2>
+            <p>BY ÅSA SIEURIN</p>
+          </div>
+        </a>
+
+        <a href="LÄNKSIDAN" class="article-color1">
+          <div class="column" style="background-color: #5A4041;">
+            <h2>The Balancing Act Of Fashion Business</h2>
+            <p>BY ÅSA SIEURIN</p>
+          </div>
+        </a>
+
+      </div>
     </section>
+
+    <section class="quote">
+      <h1> “A clever approach to fashion, intellectual questions about the right topics and always opens up a dialogue. Hajinsky brings in a new light to this sometimes absurd industry.” </h1>
+      <p>Photographer &amp; Stylist at OWOI </p>
+      <p>SIMON SCHMIDT</p>
+    </section>
+
+    <section class="articles-container">
+
+      <p>Articles on the topic of:</p>
+      <a href="LÄNKSIDAN!">Creative Processes</a>
+
+      <div class="row"> 
+
+        <a href="LÄNKSIDAN" class="article-color1">
+          <div class="column" style="background-color: rgb(196, 186, 56);">
+            <h2>The Balancing Act Of Fashion Business</h2>
+            <p>BY ÅSA SIEURIN</p>
+          </div>
+        </a>
+
+        <a href="LÄNKSIDAN" class="article-color2">
+          <div class="column" style="background-color: #65798E;">
+            <h2>The Balancing Act Of Fashion Business</h2>
+            <p>BY ÅSA SIEURIN</p>
+          </div>
+        </a>
+
+        <a href="LÄNKSIDAN" class="article-color1">
+          <div class="column" style="background-color: #5A4041;">
+            <h2>The Balancing Act Of Fashion Business</h2>
+            <p>BY ÅSA SIEURIN</p>
+          </div>
+        </a>
+
+      </div>
+
+    </section>
+
+    <footer>
+      <h1 class="stay in touch"> </h1>
+      <p class="footer-info"> </p>
+      <div class="footer-links">
+        <ul>
+          <li> facebook</li>
+          <li> instagram </li>
+          <li> copyright </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
