added some header content

--- a/code/index.html
+++ b/code/index.html
@@ -2,23 +2,34 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- meta tag for responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Project 2: The News Site</title>
+    <link rel="stylesheet" href="./style.css" />
+    
   </head>
   <body>
-    <header>
-      <img class="logo" src="logo.svg" alt="logo" /> 
-      <span>Site name</span>
-    </header>
+    <div class="wrapper">
+      <header>
+        
+        <!-- Lägger in fake logo så länge, ändra till riktig logga sen -->
+        <div class="logo"><span>Fake logo</span></div>
+        <h1>Interrail News</h1>
+        <nav>
+          <a href="#">Link</a>
+          <a href="#">Link</a>
+          <a href="#">Link</a>
+        </nav>
+      </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+      <section class="big-news">
+        <!-- The big news content -->
+      </section>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
+      <section class="">
+        <!-- The other news  -->
+      </section>
+    </div>
   </body>
 </html>
