--- a/code/index.html
+++ b/code/index.html
@@ -11,6 +11,9 @@
       <!-- Some kind of logo and navbar -->
     </header>
 
+
+
+    <h1>Test push to github</h1>
     <section class="big-news">
       <!-- The big news content -->
     </section>
