fixes responsivenes issues

--- a/code/index.html
+++ b/code/index.html
@@ -60,7 +60,7 @@
           <div class="news-feed--btn">
             <img class="news-feed--img" src="./images/car.jpg" alt="old car"/>
             <span class="date-item">20 JAN, 2022</span>
-            <h3>Tips to reduce envirnmental impact</h3>
+            <h3>Tips to reduce environmental impact</h3>
             <p>Anonymous neighbours wonder if Sören really needed to use his car so often? We must think of the environment and our generations to come.</p>
           </div>
         </div>
