git commit -m "push test 2"
git commit -m "push test 2"

git commit -m

--- a/code/index.html
+++ b/code/index.html
@@ -20,6 +20,11 @@
 
     <section class="">
       <!-- The other news  -->
+
+      <div>NEws section here</div>
+
+
+
     </section>
   </body>
 </html>
