--- a/code/index.html
+++ b/code/index.html
@@ -11,23 +11,35 @@
   </head>
   <body>
     <div class="wrapper">
+
+      <!-- The header content -->
+
       <header>
         
         <!-- Lägger in fake logo så länge, ändra till riktig logga sen -->
         <div class="logo"><span>Fake logo</span></div>
         <h1>Interrail News</h1>
         <nav>
-          <a href="#">Link</a>
-          <a href="#">Link</a>
-          <a href="#">Link</a>
+          <a href="#">About us</a>
+          <a href="#">Contact</a>
+          <a href="#">Another link</a>
         </nav>
       </header>
 
+       <!-- The big news content -->
+
       <section class="big-news">
-        <!-- The big news content -->
+        <div class="image-container big-news-child">
+          <img src="./images/johannes-hofmann-PM5a_R83-YQ-unsplash.jpg" alt="train on a bridge">
+        </div>
+        <article class="main-news big-news-child">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </article>
+       
+
       </section>
 
-      <section class="">
+      <section class="other-news">
         <!-- The other news  -->
       </section>
     </div>
