started with flexbox

--- a/code/index.html
+++ b/code/index.html
@@ -5,48 +5,55 @@
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:wght@200&display=swap">
   </head>
   <body>
     <header>
       <nav class="top-nav">
         <a class="logo" href="#">
-          <img src="istockphoto-1278931900-170667a.jpg" alt="sofa-logo">
+          <img src="C:\Kodning\Technigo-projects\Week-2\project-news-site\code\images\istockphoto-1278931900-170667a.jpg" 
+          alt="sofa-logo">
+          <p>NewsRoom</p>
         </a>
+        
+      <div class="menu">
         <a href="#">Videos</a>
         <a href="#">Blog</a>
-
+      </div>
         <input typ="text" placeholder="Search">
       </nav>
     </header>
 
     <section class="big-news">
       <a href="#">
-        <img src="nubelson-fernandes-LLo02Cg2Q3A-unsplash.jpg"
+        <img src="C:\Kodning\Technigo-projects\Week-2\project-news-site\code\images\nubelson-fernandes-LLo02Cg2Q3A-unsplash.jpg"
         alt="home-office">
         <h2>How to create the perfect home office</h2>
+        <p1>Just about anyone can benefit from having a functional workspace to tackle their to-do list, make headway on a creative project, 
+          or simply catch up on some reading. 
+          Luckily, when it comes to home office design schemes, the possibilities are endless.</p1>
       </a>
     </section>
 
     <section class="smaller-news">
-      <article class="small-news-1">
+      <article>
         <a href="#">
-          <img src="tania-miron-umYxSxMncT4-unsplash.jpg"
+          <img src="C:\Kodning\Technigo-projects\Week-2\project-news-site\code\images\tania-miron-umYxSxMncT4-unsplash.jpg"
           alt="plants">
-          <h3>The most important accessories for this spring</h3>
+          <h5>The most important accessories for this spring</h5>
         </a>
       </article>
-      <article class="small-news-2">
+      <article>
         <a href="#">
-          <img src="eugenivy_now-1mj1kCplHso-unsplash.jpg"
+          <img src="C:\Kodning\Technigo-projects\Week-2\project-news-site\code\images\bilal-mansuri-bCZkj7jEDBk-unsplash.jpg"
           alt="plants">
-          <h3>Get inspired by these bathtub spots</h3>
+          <h5>Get inspired by these bathtub spots</h5>
         </a>
       </article>
-      <article class="small-news-3"></article>
-      <article class="small-news-4"></article>
-      <article class="small-news-5"></article>
-      <article class="small-news-6"></article>
+      <article></article>
+      <article></article>
+      <article></article>
+      <article></article>
     </section>
     
     <footer>
